# UAVMonitor

./: .gitignore  CMakeLists.txt  DEPLOY.md  README.md  build.bat  build2.bat
src/: DeviationView.cpp  DeviationView.h  FrameTransmitter.cpp  FrameTransmitter.h  GDIPlusManager.h  GDIWidget.cpp  GDIWidget.h  InfoBar.cpp  InfoBar.h  MainWindow.cpp  MainWindow.h  ProfileView.cpp  ProfileView.h  Protocol.cpp  Protocol.h  Simulator.cpp  Simulator.h  TelemetryFrame.h  TimeSeriesView.cpp  TimeSeriesView.h  TrackView.cpp  TrackView.h  UAVData.h  main.cpp
